@@ -1,3 +1,7 @@
+2004-09-16  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Check memory allocation failures in libfuse
+	
 2004-09-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Check temporary file creation failure in do_getdir().  Bug
